# simplicity-dex

./: .gitignore  Cargo.toml  Makefile  Readme.md  protocol_description.md  rustfmt.toml
.github/workflows/: ci.yml
.simplicity-dex.example/: .simplicity-dex.config.toml  keypair.txt  relays.txt
crates/dcd_manager/: Cargo.toml
crates/dcd_manager/src/: error.rs  lib.rs  manager.rs
crates/dcd_manager/src/manager/: common.rs  handlers.rs  init.rs
crates/dcd_manager/src/manager/handlers/: faucet.rs  maker_funding.rs  maker_settlement.rs  split_utxo.rs
crates/dex-cli/: Cargo.toml
crates/dex-cli/src/: error.rs  lib.rs
crates/dex-cli/src/cli/: dex.rs  helper.rs  maker.rs  mod.rs  processor.rs  taker.rs
crates/dex-cli/src/common/: config.rs  keys.rs  mod.rs  store.rs  types.rs  utils.rs
crates/dex-cli/src/contract_handlers/: address.rs  faucet.rs  maker_funding.rs  maker_init.rs  maker_settlement.rs  maker_termination_collateral.rs  maker_termination_settlement.rs  split_utxo.rs  taker_early_termination.rs  taker_funding.rs  taker_settlement.rs
crates/dex-nostr-relay/: Cargo.toml
crates/dex-nostr-relay/src/: lib.rs  relay_client.rs  relay_processor.rs  types.rs
crates/dex-nostr-relay/src/handlers/: common.rs  get_events.rs  list_orders.rs  mod.rs  place_order.rs
crates/dex-nostr-relay/tests/: test_order_placing.rs
crates/global-utils/: Cargo.toml
crates/global-utils/src/: lib.rs
crates/global_utils/: Cargo.toml
crates/global_utils/src/: env_parser.rs  lib.rs  logger.rs
crates/nostr_relay_connector/: Cargo.toml
crates/nostr_relay_connector/src/: error.rs  lib.rs  relay_client.rs
crates/nostr_relay_processor/: Cargo.toml
crates/nostr_relay_processor/src/: error.rs  handlers.rs  lib.rs  relay_processor.rs  types.rs
crates/nostr_relay_processor/src/handlers/: get_events.rs  list_orders.rs  order_replies.rs  place_order.rs  reply_order.rs
crates/nostr_relay_processor/tests/: test_order_placing.rs  utils.rs
docs/: maker_taker_flow.puml
nostr_options_cli/: Cargo.toml
nostr_options_cli/src/: cli.rs  cli_processor.rs  common.rs  contract_handlers.rs  error.rs  lib.rs  main.rs  utils.rs
nostr_options_cli/src/common/: settings.rs  store.rs  utils.rs
nostr_options_cli/src/contract_handlers/: faucet.rs  maker_funding.rs  maker_init.rs  maker_settlement.rs  maker_termination_collateral.rs  maker_termination_settlement.rs  split_utxo.rs  taker_early_termination.rs  taker_funding.rs  taker_settlement.rs
