[workspace]
resolver = "3"
members = [
    "nostr_options_cli",
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Blockstream"]
readme = "README.md"


[workspace.dependencies]
anyhow = { version = "1.0.100" }
bincode = { version = "2.0.1" }
clap = { version = "4.5.49", features = ["derive"] }
config = { version = "0.15.18" }
dcd_manager = { path = "crates/dcd_manager" }
dirs = { version = "6.0.0" }
dotenvy = { version = "0.15.7" }
elements = { version = "0.26.1" }
futures-util = { version = "0.3.31" }
global_utils = { path = "./crates/global_utils" }
hex = { version = "0.4.3" }
nostr = { version = "0.43.1", features = ["std"] }
nostr-sdk = { version = "0.43.0" }
nostr_relay_connector = { path = "./crates/nostr_relay_connector" }
nostr_relay_processor = { path = "./crates/nostr_relay_processor" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
simplicity-contracts = { git = "https://github.com/BlockstreamResearch/simplicity-contracts", rev = "f775137", package = "contracts" }
simplicity-lang = { version = "0.6.0" }
simplicityhl = { version = "0.2.0" }
simplicityhl-core = { version = "0.1.1" , features = ["encoding"]}
sled = { version = "0.34.7" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["macros", "test-util", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.7" }
