[package]
name = "simplicity-dex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dcd_manager = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
elements = { workspace = true }
futures-util = { workspace = true }
global_utils = { workspace = true }
hex = { workspace = true }
nostr = { workspace = true }
nostr_relay_connector = { workspace = true }
nostr_relay_processor = { workspace = true }
serde_json = { workspace = true }
simplicity-lang = { workspace = true }
simplicity-contracts = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

