[package]
name = "dcd_manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing= { workspace = true }
simplicity = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }