[package]
name = "dex-nostr-relay"
description = "Dex Nostr Relay communicator implementation"
license = "MIT OR Apache-2.0"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
global-utils = { workspace = true }
hex = { workspace = true }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
simplicity-contracts-adapter = { workspace = true }
simplicity-contracts = { workspace = true }
simplicity-lang = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
