[package]
name = "global-utils"
description = "Simplicity dex utils"
license = "MIT OR Apache-2.0"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }